rust/crates/dsl-lsp/tree-sitter-dsl/test/corpus/incremental.txt
================================================================================
Binding with complete symbol
================================================================================

(cbu.ensure :name "Test" :as @fund)

--------------------------------------------------------------------------------

(source_file
  (list
    (verb_name)
    (keyword)
    (string)
    (binding
      (symbol_ref))))

================================================================================
Binding without symbol yet (mid-typing :as @)
================================================================================

(cbu.ensure :name "Test" :as @)

--------------------------------------------------------------------------------

(source_file
  (list
    (verb_name)
    (keyword)
    (string)
    (binding)
    (ERROR)))

================================================================================
Keyword :as without symbol (just typed :as)
================================================================================

(cbu.ensure :name "Test" :as)

--------------------------------------------------------------------------------

(source_file
  (list
    (verb_name)
    (keyword)
    (string)
    (binding)))

================================================================================
Simple verb call with keyword and string
================================================================================

(cbu.create :name "Fund")

--------------------------------------------------------------------------------

(source_file
  (list
    (verb_name)
    (keyword)
    (string)))

================================================================================
Nested verb calls
================================================================================

(outer.verb :inner (inner.call :x 42))

--------------------------------------------------------------------------------

(source_file
  (list
    (verb_name)
    (keyword)
    (list
      (verb_name)
      (keyword)
      (number))))

================================================================================
List literal
================================================================================

(test.verb :items [1 2 3])

--------------------------------------------------------------------------------

(source_file
  (list
    (verb_name)
    (keyword)
    (array
      (number)
      (number)
      (number))))

================================================================================
Map literal
================================================================================

(test.verb :config {:key "value" :count 42})

--------------------------------------------------------------------------------

(source_file
  (list
    (verb_name)
    (keyword)
    (map
      (keyword)
      (string)
      (keyword)
      (number))))

================================================================================
Comment followed by verb call
================================================================================

;; This is a comment
(cbu.create :name "Test")

--------------------------------------------------------------------------------

(source_file
  (comment)
  (list
    (verb_name)
    (keyword)
    (string)))

================================================================================
Boolean and null literals
================================================================================

(test.verb :active true :deleted false :value nil)

--------------------------------------------------------------------------------

(source_file
  (list
    (verb_name)
    (keyword)
    (boolean)
    (keyword)
    (boolean)
    (keyword)
    (null_literal)))

================================================================================
Symbol reference as value
================================================================================

(entity.link :cbu-id @my-cbu :entity-id @person)

--------------------------------------------------------------------------------

(source_file
  (list
    (verb_name)
    (keyword)
    (symbol_ref)
    (keyword)
    (symbol_ref)))

================================================================================
Multiple statements
================================================================================

(cbu.create :name "Fund A" :as @fund-a)
(cbu.create :name "Fund B" :as @fund-b)

--------------------------------------------------------------------------------

(source_file
  (list
    (verb_name)
    (keyword)
    (string)
    (binding
      (symbol_ref)))
  (list
    (verb_name)
    (keyword)
    (string)
    (binding
      (symbol_ref))))
